--- a/Fylo-FronedMentor-Challenge/index.css
+++ b/Fylo-FronedMentor-Challenge/index.css
@@ -11,10 +11,6 @@ body{
     --text-2-color: white;
     --icon-color: hsl(243, 100%, 93%);
 
-    /* main = 'Raleway' , 22.4px , regular */
-    /* headline = 'Raleway' , 48px , bold */
-    /* Row Width = 80% */
-    /* Col Gap = 32px; */
     min-height: 100%;
     margin: 0;
     background-color: var(--site-background);
@@ -46,7 +42,7 @@ progress {
 }
 
 progress[value]::-webkit-progress-bar {
-    background:  linear-gradient(90deg, var(--progress-bar-start-gradient), var(--progress-bar-end-gradient));
+    background:  var(--site-background);
     border-radius: 5px;
 }
 progress[value]::-webkit-progress-value {
@@ -139,5 +135,4 @@ progress[value]::-moz-progress-bar {
     border-width: 0  25px 20px 0;
     border-color: transparent var(--text-2-color) transparent transparent;
     position: absolute;
-    /* z-index: 3; */
 }
