--- a/Fylo-FronedMentor-Challenge/index.css
+++ b/Fylo-FronedMentor-Challenge/index.css
@@ -49,11 +49,14 @@ progress[value]::-webkit-progress-bar {
 progress[value]::-webkit-progress-value {
     background:  linear-gradient(90deg, var(--progress-bar-start-gradient), var(--progress-bar-end-gradient));
     border-radius: 5px;
+    transition: width 1s ease-in-out;
 }
 
 progress[value]::-moz-progress-bar {
     background:  linear-gradient(90deg, var(--progress-bar-start-gradient), var(--progress-bar-end-gradient));
     border-radius: 5px;
+    transition: width 1s ease-in-out;
+
 }
 
 .site-background{
